remove the chat portion for now as it overflows

--- a/ratchet-examples/websockets/drawing/index.html
+++ b/ratchet-examples/websockets/drawing/index.html
@@ -215,7 +215,7 @@
         <div id="panel">
             <table style="width: 100%; padding: 10px;"><tr><td>
 
-                <p><strong><a href="https://github.com/steverhoades/async-talk-examples">Multi-User Sketchpad & Chat</a><br /> by <a href="http://twitter.com/steverhoades">Steve Rhoades</a></strong></p>
+                <p><strong><a href="https://github.com/steverhoades/async-talk-examples">Multi-User Sketchpad</a><br /> by <a href="http://twitter.com/steverhoades">Steve Rhoades</a></strong></p>
                 Save: <a onclick="saveDrawing()">.png</a><br />
                 <div style='position: relative; margin-top:15px;'>
                     <div style='float:left'><strong>Change Color:</strong></div><div style='float:left;margin-left: 10px;'> <input type="text" id="color_box" value="#000000" size="7" /></div>
